Fix spacing for enterprise signin explanation text.

BUG=604265

Review-Url: https://codereview.chromium.org/2030503002
Cr-Commit-Position: refs/heads/master@{#397278}

Former-commit-id: 9b08c00f4e97c879f3e7be1165bf996793531762